<resources>
    <string name="app_name">Homework 3</string>
    <string name="convert">CONVERT</string>
    <string name="to_currency">To Currency:</string>
    <string name="from_currency">From Currency:</string>
    <string name="enter_amount">***ENTER AMOUNT***</string>
    <string name="currency_converter">Currency Converter</string>

    <string-array name="Languages">
        <item>USD</item>
        <item>VND</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>CNY</item>
    </string-array>

</resources>